--- a/EzOrder(Cus)/View/Order/Order.storyboard
+++ b/EzOrder(Cus)/View/Order/Order.storyboard
@@ -289,7 +289,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2OV-BO-BVq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1664.8" y="192.95352323838082"/>
+            <point key="canvasLocation" x="1585" y="193"/>
         </scene>
         <!--Cart View Controller-->
         <scene sceneID="7PJ-4y-4vJ">
@@ -416,7 +416,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g3q-98-F4m" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="9uh-n9-nW0" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2485.5999999999999" y="192.95352323838082"/>
+            <point key="canvasLocation" x="2287" y="193"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="DJx-2f-JNE">
