--- a/EzOrder(Cus)/View/Search/Search.storyboard
+++ b/EzOrder(Cus)/View/Search/Search.storyboard
@@ -442,7 +442,7 @@
                                                 </constraints>
                                             </mapView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD5" translatesAutoresizingMaskIntoConstraints="NO" id="TRO-6U-Ph6">
-                                                <rect key="frame" x="0.0" y="0.0" width="375.00000000000091" height="187.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="187.5"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="TRO-6U-Ph6" secondAttribute="height" multiplier="2:1" id="bLW-5a-GRt"/>
                                                 </constraints>
@@ -497,7 +497,7 @@
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD2" translatesAutoresizingMaskIntoConstraints="NO" id="Irf-2g-2hf">
-                                                                    <rect key="frame" x="24.5" y="5" width="73.000000000000909" height="73"/>
+                                                                    <rect key="frame" x="24.5" y="5" width="73" height="73"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" secondItem="Irf-2g-2hf" secondAttribute="height" multiplier="1:1" id="h68-qN-jnI"/>
                                                                     </constraints>
